--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         .form-group input[type="number"],
         .form-group input[type="tel"] {
             width: 100%;
+            color: white;
             background: #00000000;
             padding: 10px;
             border: 1px solid #ffffff17;
@@ -169,7 +170,7 @@
             </div>
         </div>
         <div class="form-group">
-            <button type="submit">Submit</button>
+            <button type="submit">Place Order</button>
         </div>
     </form>
 </div>
