--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
         .inner-form-container{
             padding: 20px;
         }
-        .form-container .inner-form-container h2 {
-            margin-bottom: 20px;
+        .form-container .inner-form-container .title h2 {
+            margin: 10px 0;
             font-size: 24px;
             color: #f5f5f5;
+            text-align: center;
+        }
+        .form-container .inner-form-container .title p {
+            font-size: 15px;
+            margin-bottom: 20px;
+            margin-top: 0;
+            color: #f5f5f5;
+            opacity: .75;
             text-align: center;
         }
         .form-group {
@@ -193,13 +201,51 @@
 }
 
 
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.spinner {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-top: 4px solid #fff;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+
+
     </style>
 </head>
 <body>
 
+
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="spinner"></div>
+    </div>
+    
+
 <div class="form-container">
     <div class="inner-form-container">
-    <h2>Book Now</h2>
+    <div class="title">
+        <h2>ESOFT Movie Festival</h2>
+        <p>Book Your Ticket Now</p>
+    </div>
     <form id="movieForm">
         <div class="form-group">
             <label for="name">Name</label>
@@ -216,6 +262,7 @@
 
         <div class="form-group">
             <label>Select Movies</label>
+            <div id="errorMessage" class="error-message" style="display: none; color:red;"></div>
             <div class="movies-wrapper">
                 <button type="button" class="scroll-button left" id="scrollLeft"><i class="fas fa-chevron-left"></i></button>
                 <div class="movies scroll-container">
@@ -277,7 +324,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Selected movies will be dynamically added here -->
+                    
                 </tbody>
             </table>
             <p>Total <span id="totalCostText">Rs.0</span></p>
@@ -346,9 +393,31 @@
     });
 });
 
+const loadingOverlay = document.getElementById('loadingOverlay');
+const errorMessage = document.getElementById('errorMessage');
 
-form.addEventListener('submit', e => {
+form.addEventListener('submit', async (e) => {
     e.preventDefault();
+
+    // Check if there are no selected movies
+    const selectedMovieCheckboxes = document.querySelectorAll('.movie input[type="checkbox"]:checked');
+    if (selectedMovieCheckboxes.length === 0) {
+        errorMessage.textContent = 'Please select at least one movie.';
+        errorMessage.style.display = 'block';
+
+        // Scroll to the "Select Movies" section
+        const moviesSection = document.querySelector('.form-group.movies-wrapper');
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+
+        return; // Stop form submission
+    }
+
+    // Hide error message if there are selected movies
+    errorMessage.style.display = 'none';
+
+    // Show loading overlay
+    loadingOverlay.style.display = 'flex';
+
     const formData = new FormData(form);
 
     // Get the ticket count and add it to the form data
@@ -365,25 +434,29 @@ form.addEventListener('submit', e => {
 
     // Convert selected movies array to a comma-separated string
     const selectedMovies = [];
-    document.querySelectorAll('.movie input[type="checkbox"]:checked').forEach(movie => {
+    selectedMovieCheckboxes.forEach(movie => {
         selectedMovies.push(movie.value);
     });
     formData.set('selected_movies', selectedMovies.join(', '));
 
     // Fetch scriptURL with the updated form data
-    fetch(scriptURL, { method: 'POST', body: formData })
-        .then(response => {
-            if (response.ok) {
-                alert('Order placed successfully!');
-            } else {
-                throw new Error('Failed to place order.');
-            }
-        })
-        .catch(error => {
-            console.error('Error!', error.message);
-            alert('Failed to place order. Please try again later.');
-        });
+    try {
+        const response = await fetch(scriptURL, { method: 'POST', body: formData });
+        if (response.ok) {
+            alert('Order placed successfully!');
+            form.reset(); // Clear the form after successful submission
+        } else {
+            throw new Error('Failed to place order.');
+        }
+    } catch (error) {
+        console.error('Error:', error.message);
+        alert('Failed to place order. Please try again later.');
+    } finally {
+        // Hide loading overlay
+        loadingOverlay.style.display = 'none';
+    }
 });
+
 
 
 
