--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <div class="title">
         <h2>ESOFT Movie Festival</h2>
         <p>Book Your Ticket Now</p>
-        <a style="color:red; text-decoration:none; text-align:center; font-size:10px">The event has been postponed to the 11th and 12th due to bad weather</a>
+        <p style="color:red; text-decoration:none; text-align:center; font-size:10px">The event has been postponed to the 11th and 12th due to bad weather</p>
     </div>
     <form id="movieForm">
         <div class="form-group">
